# UnitedTiles

./: .gitignore  CMakeLists.txt  United Tiles.sln  United Tiles.vcxproj  United Tiles.vcxproj.filters  build_and_run_android.bat  build_and_run_android.sh  build_android.bat  build_android.sh  deploy_android.sh  postbuild_windows.bat  run_android.bat  run_android.sh  run_deployed.sh  songlist.txt  test.cpp
android/: build.gradle  settings.gradle
android/app/: build.gradle  build.gradle.txt  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml  AndroidManifest.xml.txt
android/app/src/main/java/com/volian/unitedtiles/: UnitedTilesActivity.java  UnitedTilesActivity.java.txt
android/app/src/main/java/org/libsdl/app/: HIDDeviceManager.java  SDLActivity.java
android/app/src/main/jni/: Android.mk  Application.mk
android/app/src/main/res/values/: strings.xml
include/SDL_mixer/: Android.mk
include/midifile/: impl.hpp
lib/windows/static/: fluidsynth.lib
res/database/: songs.db  songs.txt
res/songs/: 12 German Dances WoO 8 No 1.usong  12 German Dances WoO 8 No 5.usong  2 Rondos Op 51 No 1 in C Major.usong  3 Etudes Op 104b No 1.usong  6 Ecossaises WoO 83 No 4.usong  7 Landler WoO 11.usong  9 Minutes.usong  A Breeze from Alabama.usong  Allegretto in C Major Op 125 No 3.usong  Alleluia in F Major Op 25.usong  Allemande WoO 81.usong  An Evening at the Village.usong  An Old Christmas Carol.usong  Ancient Provencal Christmas Carol.usong  Anitras Dance.usong  Annen Polka Op 117.usong  Arabesque Op 100 No 2.usong  Arabian Nights.usong  Arietta Op 12 No 1.usong  Ave Verum Corpus.usong  Bagatelle Op 119 No 1.usong  Bagatelle Op 119 No 10.usong  Bagatelle Op 119 No 11.usong  Bagatelle Op 119 No 2.usong  Bagatelle Op 119 No 3.usong  Bagatelle Op 119 No 4.usong  Bagatelle Op 119 No 5.usong  Bagatelle Op 119 No 7.usong  Bagatelle Op 119 No 8.usong  Bagatelle Op 119 No 9.usong  Bagatelle in C Minor WoO 52.usong  Bagatelle in F Major.usong  Beyer No 8.usong  Birthday Rag.usong  Breaktime.usong  Broken Up.usong  Can Can.usong  Canon in D.usong  Carillon.usong  Carnaval Op 9 No 12.usong  (+194 more)
src/: AdManager.cpp  AdManager.hpp  AudioDevice.cpp  AudioDevice.h  BurstParticles.cpp  BurstParticles.h  Color.h  Colors.h  Configuration.cpp  Configuration.h  DevButton.cpp  DevButton.h  DevTouch.cpp  DevTouch.h  DustMotes.cpp  DustMotes.h  ExtraSoundfonts.h  File.cpp  File.h  Font.cpp  Font.h  FpsCounter.cpp  FpsCounter.h  Game.cpp  Game.h  GameState.cpp  GameState.h  Music.cpp  Music.hpp  NetworkFile.cpp  NetworkFile.h  NonCopyable.h  Number.h  Path.cpp  Path.h  RNG.cpp  RNG.h  Renderer.cpp  Renderer.h  RendererReloadable.cpp  (+33 more)
src/tiles/: ComboTile.cpp  ComboTile.hpp  DoubleTile.cpp  DoubleTile.h  EmptyTile.cpp  EmptyTile.h  LongTile.cpp  LongTile.h  SingleTile.cpp  SingleTile.h  SliderTile.cpp  SliderTile.h  Tile.cpp  Tile.h
src/ui/: CheckBox.cpp  CheckBox.h  Label.cpp  Label.h  MultiLineLabel.cpp  MultiLineLabel.h  ScrollablePanel.cpp  ScrollablePanel.h  Slider.h  TextInput.cpp  TextInput.h
tools/csv2db/src/: main.cpp
tools/midi2usong/: input.mid  midi2usong.vcxproj
tools/midi2usong/src/: main.cpp
